# email-cli

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  gmail_credentials.cmake  manage.sh
.claude/memory/: MEMORY.md  architecture_decisions.md  feedback_commit_discipline.md  project_status.md  user_preferences.md  workflow_handbook.md
.github/workflows/: ci.yml  coverage.yml  valgrind.yml
build_noasan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  email-cli
build_noasan/tests/unit/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/: .gitignore  README.md  demo.tape  demo_setup.sh  demo_teardown.sh  gen_audio.sh  gen_tape.sh  install_deps.sh  make_demo.sh  narration_en.txt  narration_hu.txt  pipeline.sh  restart_smtp.sh
demo/scenarios/email-cli/: narration_en.txt  narration_hu.txt  tape.tape.template
demo/scenarios/email-cli-ro/: narration_en.txt  narration_hu.txt  tape.tape.template
demo/scenarios/email-sync/: narration_en.txt  narration_hu.txt  tape.tape.template
demo/scenarios/email-tui/: narration_en.txt  narration_hu.txt  tape.tape.template
doc/: concepts.md  design.md  functional_testing.md  logging.md  raii.md  unit_testing.md
docs/: README.md
docs/adr/: 0001-clean-architecture.md  0002-raii-memory-safety.md  0003-custom-test-framework.md  0004-binary-split-ro-tui-sync.md
docs/dev/: feedback-line-feature.md  gmail-milestones.md  gmail-oauth2-setup.md  logging.md  testing.md  user-stories.md
docs/issues/: BUG-001-isnt-silent-conversion.md  BUG-002-utf7-folder-name-display.md  TASK-001-phase38-extended-warn-tests.md  TASK-002-us65-impl-and-tests.md  TASK-003-us66-impl-and-tests.md  TASK-004-us67-impl-and-tests.md  TASK-005-us68-impl-and-tests.md  TASK-006-us69-impl-and-tests.md  TASK-007-us70-impl-and-tests.md  TASK-008-us71-condstore-impl-and-tests.md  TASK-009-us62-tui-rules-editor-tests.md  TASK-010-configurable-keybindings.md  TASK-011-us75-import-rules-additional-actions.md  TASK-012-us76-import-rules-prefs-account-mapping.md
docs/spec/: README.md  caching.md  commands.md  compose-dialog.md  credential-obfuscation.md  email-sync.md  gmail-api.md  html-rendering.md  imap-protocol.md  input-line.md  local-first-send.md  local-store.md  manifest-cache.md  output-formats.md  pagination.md
docs/user/: configuration.md  getting-started.md  usage.md
docs/userstories/: 01-interactive-tui.md  02-list-command.md  03-show-command.md  04-folders-command.md  05-sync-command.md  06-cron-setup.md  07-cron-remove.md  08-cron-status.md  09-help.md  10-setup-wizard.md  11-offline-mode.md  12-message-reader.md  13-email-cli-ro.md  14-interactive-list-navigation.md  15-interactive-folders-navigation.md  16-attachment-management.md  17-email-sync.md  18-email-tui.md  19-background-sync.md  20-compose-reply.md  21-multi-account.md  22-help-panel.md  23-tls-enforcement.md  24-account-config.md  25-sync-account-filter.md  26-pending-flag-queue.md  27-gmail-account-setup.md  28-gmail-label-navigation.md  29-gmail-message-operations.md  30-gmail-label-picker.md  31-gmail-sync.md  32-gmail-compose-send.md  33-batch-send.md  34-tui-connection-error.md  35-gmail-oauth-validation.md  36-imap-port-config.md  37-gmail-flag-toggle-sync.md  38-batch-flag-operations.md  39-batch-label-operations.md  40-label-management.md  (+43 more)
libemail/: CMakeLists.txt
libemail/src/core/: config.c  config.h  fs_util.c  fs_util.h  html_medium.h  html_parser.c  html_render.c  html_render.h  imap_util.c  imap_util.h  input_line.c  input_line.h  json_util.c  json_util.h  logger.c  logger.h  mime_util.c  path_complete.c  path_complete.h  raii.h
libemail/src/domain/: email_service.c  email_service.h
libemail/src/infrastructure/: config_store.c  config_store.h  gmail_auth.c  gmail_auth.h  gmail_client.c  gmail_client.h  gmail_sync.c  gmail_sync.h  help_gmail.h  imap_client.c  imap_client.h  local_store.c  local_store.h  mail_client.c  mail_client.h  mail_rules.c  mail_rules.h  setup_wizard.c  setup_wizard.h  when_expr.c  when_expr.h
libemail/src/platform/: credential_key.h  path.h  process.h  terminal.h
libemail/src/platform/posix/: credential_key.c  html_medium.c  path.c  process.c  terminal.c
libemail/src/platform/windows/: credential_key.c  path.c  terminal.c
libs/libptytest/: CMakeLists.txt  pty_assert.h  pty_internal.h  pty_screen.c  pty_session.c  pty_sync.c  ptytest.h  test_ptytest.c
libwrite/: CMakeLists.txt
libwrite/src/: compose_service.c  compose_service.h  smtp_adapter.c  smtp_adapter.h
src/: main.c  main_import_rules.c  main_ro.c  main_sync.c  main_tui.c
src/core/: config.c  config.h  fs_util.c  html_parser.c  html_parser.h  html_render.c  imap_util.c  imap_util.h  input_line.c  input_line.h  logger.c  logger.h  mime_util.c  mime_util.h  path_complete.c  raii.h
src/domain/: email_service.c  email_service.h
src/infrastructure/: cache_store.c  cache_store.h  config_store.c  config_store.h  curl_adapter.c  curl_adapter.h  imap_client.c  imap_client.h  local_store.c  local_store.h  setup_wizard.c  setup_wizard.h
src/platform/: terminal.h
src/platform/posix/: path.c  terminal.c
tests/functional/: mock_gmail_api_server.c  mock_imap_server.c  run_functional.sh
tests/integration/: Dockerfile  docker-compose.yml  entrypoint.sh  run_integration.sh  run_local_dovecot.sh
tests/pty/: CMakeLists.txt  input_line_harness.c  mock_smtp_server.c  test_compose_pty.c  test_input_line_pty.c  test_pty_compose_dialog.c  test_pty_gmail_tui.c  test_pty_mail_rules.c  test_pty_send_local.c  test_pty_views.c
tests/unit/: CMakeLists.txt  html_medium_stub.c  test_cache.c  test_compose_service.c  test_config.c  test_curl.c  test_email_service.c  test_fs_util.c  test_gmail_auth.c  test_gmail_client.c  test_gmail_sync.c  test_html_parser.c  test_html_render.c  test_imap_client.c  test_imap_util.c  test_input_line.c  test_json_util.c  test_label_idx.c  test_local_store.c  test_logger.c  test_mail_client.c  test_mail_rules.c  test_mime.c  test_path_complete.c  test_platform.c  test_runner.c  test_smtp_adapter.c  test_when_expr.c  test_wizard.c
(+8 files in other folders)
